tests/frontend/fail/array/out_of_bounds_post.act
contract B

constructor
interface constructor()

creates

  int[3] a := [1,2,3]

ensures

  a[4] == 0
